# SuperCrawler

./: Notes.md  README.md
supercrawler/: POETRY.md  cleanbuild.sh  main.py  pyproject.toml
supercrawler/src/supercrawler/: __init__.py  cli.py  crawl_output_serializer.py  main.py
supercrawler/src/supercrawler/common/: __init__.py  async_work_scheduler_interface.py  bounded_async_work_scheduler.py  concurrent_operation_invoker.py  logger.py  operation.py  operation_already_tracked_error.py  operation_id.py  operation_invoker.py  operation_progress_state.py  operation_result.py  retryable_operation.py  sequential_operation_invoker.py  work_id.py  work_outcome.py
supercrawler/src/supercrawler/common/logging/: logger.py
supercrawler/src/supercrawler/crawler/: explore_url_operation.py  explore_url_operation_factory.py  sub_domain_explorer.py
supercrawler/src/supercrawler/model/: page.py  page_content.py  page_exploration_result.py  page_id.py
supercrawler/src/supercrawler/web/: scraper.py
supercrawler/tests/integration/: packaging_test.py  sub_domain_explorer_test.py
supercrawler/tests/unit/: concurrent_operation_invoker_test.py  crawl_output_serializer_test.py  explore_url_operation_factory_test.py  retryable_operation_test.py  scraper_test.py  sequential_operation_invoker_test.py  sub_domain_explorer_test.py
supercrawler/tests/unit/common/: bounded_async_work_scheduler_test.py  retryable_operation_test.py
supercrawler/tests/unit/crawler/: explore_url_operation_factory_test.py  sub_domain_explorer_test.py
supercrawler/tests/unit/web/: scraper_test.py
(+4 files in other folders)
