[project]
name = "supercrawler"
version = "0.1.0"
description = ""
authors = [
    {name = "mrchazaaa",email = "charlie.howlett@live.co.uk"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
]

[project.scripts]
supercrawler = "supercrawler.cli:main"


[tool.poetry]
packages = [{include = "supercrawler", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
